--- a/index.html
+++ b/index.html
@@ -1,23 +1,181 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>For My Forever Valentine ❤️</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --pink: #ff4d6d;
+            --dark-pink: #c9184a;
+            --bg: #fff0f3;
+        }
+
+        body { 
+            background: var(--bg); 
+            text-align: center; 
+            font-family: 'Poppins', sans-serif; 
+            overflow-x: hidden; 
+            min-height: 100vh; 
+            margin: 0;
+        }
+
+        /* Rose Rain */
+        .rose { 
+            position: fixed; 
+            top: -10%; 
+            animation: fall 4s linear infinite; 
+            z-index: 100; 
+            font-size: 25px;
+            pointer-events: none;
+        }
+        @keyframes fall { 
+            to { transform: translateY(110vh) rotate(360deg); } 
+        }
+        
+        /* Card Design */
+        .card { 
+            background: white; 
+            margin: 40px auto; 
+            padding: 30px; 
+            width: 85%; 
+            max-width: 450px;
+            border-radius: 30px; 
+            box-shadow: 0 15px 35px rgba(255, 77, 109, 0.2);
+            position: relative; 
+            z-index: 10;
+        }
+
+        h1 { 
+            font-family: 'Dancing Script', cursive;
+            color: var(--dark-pink); 
+            font-size: 2.5rem; 
+            margin-bottom: 10px; 
+        }
+
+        /* Photos Section */
+        .photo-grid { 
+            display: flex; 
+            justify-content: center; 
+            gap: 12px; 
+            flex-wrap: wrap; 
+            margin: 20px 0; 
+        }
+        .box { 
+            width: 80px; 
+            height: 80px; 
+            background: #fff; 
+            border: 2px solid var(--pink); 
+            border-radius: 15px; 
+            font-size: 35px; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            box-shadow: 4px 4px 10px rgba(0,0,0,0.05);
+            overflow: hidden;
+        }
+        .box img { width: 100%; height: 100%; object-fit: cover; }
+
+        /* Message */
+        .message { 
+            font-size: 1rem; 
+            color: #444; 
+            line-height: 1.6; 
+            padding: 20px; 
+            background: #fff5f6; 
+            border-radius: 20px; 
+            border-left: 5px solid var(--pink);
+            text-align: left;
+        }
+
+        /* Game Buttons */
+        .game-area {
+            margin-top: 30px;
+            height: 150px;
+            position: relative;
+        }
+        #yes-btn { 
+            padding: 12px 40px; 
+            background: var(--pink); 
+            color: white; 
+            border-radius: 50px; 
+            border: none; 
+            font-size: 1.2rem; 
+            cursor: pointer; 
+            font-weight: 600;
+            transition: 0.3s;
+            box-shadow: 0 5px 15px rgba(255, 77, 109, 0.4);
+        }
+        #yes-btn:hover { transform: scale(1.1); background: var(--dark-pink); }
+
+        #no-btn { 
+            position: absolute; 
+            padding: 10px 25px; 
+            background: #adb5bd; 
+            color: white; 
+            border-radius: 50px; 
+            border: none; 
+            cursor: pointer; 
+            font-weight: 600;
+            transition: 0.1s;
+        }
+    </style>
+</head>
+<body>
+
 <div class="card">
-  <h1>❤️ Happy Valentine's Day! ❤️</h1>
-  
-  <div class="photo-grid">
-    <div class="box">🧸</div>
-    <div class="box">🍫</div>
-    <div class="box">🌹</div>
-    <div class="box">💖</div>
-  </div>
+    <h1>Happy Valentine's Day!</h1>
+    
+    <div class="photo-grid">
+        <div class="box">🧸</div>
+        <div class="box">🍫</div>
+        <div class="box">🌹</div>
+        <div class="box">💖</div>
+    </div>
 
-  <div class="items">🧸 🍫 🌹</div>
+    <div class="message">
+        "Happy Valentine's Day, my love! ❤️ Your smile lights up my world, and your love fills my life with joy. You're the best thing that's ever happened to me, and I'm so grateful to have you by my side. <br><br>
+        Bahot sari dikkate ayi h apne relationship me par apn ne abhi tk jaise sambhala h wse he aage bhi sambhalna h. I love you more than words can say!"
+    </div>
 
-  <p class="message">
-    ""Happy Valentine's Day, my love! ❤️ Your smile lights up my world, and your love fills my life with joy. You're the best thing that's ever happened to me✨, and I'm so grateful to have you by my side😚.
-We’ve faced so many challenges 🧿and gone through tough times in our relationship, but the way we’ve handled everything together has only made us stronger ❤️. No matter what happens, I want you to stay by my side forever❤️🧿. Just like we've managed things until now, I know we will conquer everything ahead together. I love you more than words can ever say! ❤️🫂" "
-  </p>
-
-  <div style="margin: 50px 0; height: 100px; position: relative;">
-    <h3>Will you be mine forever?</h3>
-    <button id="yes-btn" onclick="celebrate()">YES!</button>
-    <button id="no-btn" onmouseover="moveNo()">NO</button>
-  </div>
+    <div class="game-area">
+        <h3 style="color: #555;">Will you be mine forever?</h3>
+        <button id="yes-btn" onclick="celebrate()">YES!</button>
+        <button id="no-btn" onmouseover="moveNo()">NO</button>
+    </div>
 </div>
+
+<script>
+    // Falling Roses Effect
+    function createRose() {
+        const r = document.createElement('div');
+        r.className = 'rose'; r.innerHTML = '🌹';
+        r.style.left = Math.random() * 100 + 'vw';
+        r.style.animationDuration = (Math.random() * 2 + 2) + 's';
+        document.body.appendChild(r);
+        setTimeout(() => r.remove(), 4000);
+    }
+    setInterval(createRose, 300);
+
+    // Runaway NO Button Game
+    function moveNo() {
+        const btn = document.getElementById('no-btn');
+        // Screen boundary ke andar hi bhagega
+        const x = Math.random() * (window.innerWidth - btn.offsetWidth - 20);
+        const y = Math.random() * (window.innerHeight - btn.offsetHeight - 20);
+        btn.style.left = x + 'px';
+        btn.style.top = y + 'px';
+    }
+
+    // Celebration on YES
+    function celebrate() {
+        alert("I Knew it! ❤️ I Love You So Much! 😘");
+        // Happy tears/roses rain
+        for(let i=0; i<100; i++) {
+            setTimeout(createRose, i * 30);
+        }
+    }
+</script>
+</body>
+</html>
