--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
     </div>
 
     <div class="game-area">
-        <h3 style="color: #555;">Will you be mine forever?</h3>
+        <h3 style="color: #555;">Can we keep this 'us' forever?
+Ab itna jhel hi liya hai, toh kya poori life jhelogi? 😂</h3>
         <button id="yes-btn" onclick="celebrate()">YES!</button>
         <button id="no-btn" onmouseover="moveNo()">NO</button>
     </div>
